# paddy-disease

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/checkpoint/: default.yaml
configs/data/: paddy.yaml
configs/export/: onnx.yaml  tensorrt.yaml
configs/logging/: mlflow.yaml
configs/model/: resnet34.yaml
configs/optim/: sgd.yaml
configs/train/: default.yaml
data/raw/: .gitignore  sample_submission.csv.dvc  test_images.dvc  train.csv.dvc  train_images.dvc
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_2/: hparams.yaml
paddy_disease/: commands.py  config.py
paddy_disease/data/: dataset.py  download.py  labels.py  loaders.py  split.py  transforms.py
paddy_disease/export/: onnx_export.py  tensorrt.sh  tensorrt_export.py
paddy_disease/inference/: labels_export.py  triton_client.py
paddy_disease/models/: resnet34.py
paddy_disease/training/: datamodule.py  lightning_module.py  plot_callback.py  train.py
paddy_disease/utils/: __init__.py  data.py  git.py
paddy_disease/web/: app.py
paddy_disease/web/templates/: index.html
triton/model_repository/paddy_resnet34/: config.pbtxt
